# pei-nwdaf-policy

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
.github/workflows/: update-submodule.yml
client_sdk/: README.md  pyproject.toml  setup.py
client_sdk/policy_client/: __init__.py  client.py  config.py  kafka_interceptor.py  middleware.py
client_sdk/policy_client/transformers/: __init__.py  base.py  field_filter.py  hashing.py  pipeline.py  redaction.py  substitution.py
configs/: README.md  permit_resources.yaml  permit_roles.yaml  transformers.json
src/core/: config.py  exceptions.py  policy.py  rule.py
src/models/: enums.py  schemas.py
src/permit/: __init__.py  permit_client.py
src/routers/: __init__.py
src/routers/v1/: component_router.py  ml_router.py  policy_router.py  transformer_router.py
src/services/: __init__.py  cache_service.py  component_service.py  ml_model_service.py  policy_service.py  transformer_service.py
src/transformers/: base.py  pipeline.py  redaction.py
